# feed_forward_Gaussian_Splat

./: .gitignore  ANYSPLAT_INTEGRATION.md  ARIADNE_CODEX_BUILD_SPEC.md  MVSPLAT_INTEGRATION.md  OPENSPLAT_CPU_INTEGRATION.md  README.md  SETUP.md  SMOKE_TESTS.md  requirements.txt
applications/ariadne/: README.md  pyproject.toml
applications/ariadne/benchmarks/: common_types.py
applications/ariadne/configs/datasets/: registry.yaml
applications/ariadne/configs/intelligence/: default.yaml
applications/ariadne/configs/simulation/: two_node.yaml
applications/ariadne/configs/vio/: openvins_d2.launch
applications/ariadne/configs/wingman/: default.yaml
applications/ariadne/docker/: Dockerfile  Dockerfile.orbslam3-build
applications/ariadne/docs/: architecture.md  coordinate_frames.md  datasets.md  phase1_models.md  real_vio.md
applications/ariadne/examples/: transform_roundtrip.py
applications/ariadne/scripts/: download_datasets.py  prepare_openvins_d2_config.py  replicate_ignored_assets.sh  run_dataset_sequence.py  run_openvins.sh  run_orbslam3.sh  run_real_vio.py  setup_vio_backends.sh
applications/ariadne/src/ariadne/: __init__.py  __main__.py  cli.py  config.py  logging.py
applications/ariadne/tests/: __init__.py
applications/ariadne/tests/integration/: test_cli.py
applications/ariadne/tests/unit/: test_common_types.py  test_config.py  test_dataset_evaluation.py  test_external_vio.py  test_logging.py  test_models.py  test_phase1_benchmark.py  test_pose_graph.py  test_replay.py  test_timing.py  test_tracking.py  test_wandb_evaluation.py
(+122 files in other folders)
